{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 132,
  "lineage": "deb9cc62-520d-a1f4-ba44-9a325b462f0e",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e",
            "arn_suffix": "app/inia-prod-alb/9e5f326344bb536e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "inia-prod-alb-1018419614.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inia-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03944b952c67b0efe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cdc4f0db93fa289"
              },
              {
                "subnet_id": "subnet-03dd367e5fb6889db"
              },
              {
                "subnet_id": "subnet-06a4e02efee99885e"
              },
              {
                "subnet_id": "subnet-0acff79684d6c01e1"
              },
              {
                "subnet_id": "subnet-0b48a768fccdb4175"
              },
              {
                "subnet_id": "subnet-0f1c73aafa964ff54"
              }
            ],
            "subnets": [
              "subnet-01cdc4f0db93fa289",
              "subnet-03dd367e5fb6889db",
              "subnet-06a4e02efee99885e",
              "subnet-0acff79684d6c01e1",
              "subnet-0b48a768fccdb4175",
              "subnet-0f1c73aafa964ff54"
            ],
            "tags": {
              "Name": "inia-prod-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-alb",
              "Project": "IniaProject"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-frontend-tg/bead890bde177b06",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "IniaProject"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.main",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.frontend",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/c81b9a8d53bcca1f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/Inia/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/c81b9a8d53bcca1f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "IniaProject"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.main",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http_forward",
            "module.ecs.aws_lb_listener.https",
            "module.ecs.aws_lb_target_group.backend",
            "module.ecs.aws_lb_target_group.frontend",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/2891933387789cc7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/Inia/actuator/health*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/2891933387789cc7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "priority": 110,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "IniaProject"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.main",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http_forward",
            "module.ecs.aws_lb_listener.https",
            "module.ecs.aws_lb_target_group.backend",
            "module.ecs.aws_lb_target_group.frontend",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-middleware-tg/5bf9267f18c3f572",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/7c1c73c5357f244f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/middleware/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/7c1c73c5357f244f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "priority": 200,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "IniaProject"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.main",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http_forward",
            "module.ecs.aws_lb_listener.https",
            "module.ecs.aws_lb_target_group.frontend",
            "module.ecs.aws_lb_target_group.middleware",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "swagger",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/acdc1d3e65308af7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/Inia/swagger*",
                      "/Inia/swagger-resources*",
                      "/Inia/swagger/*",
                      "/Inia/v3/api-docs*",
                      "/Inia/v3/api-docs/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener-rule/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a/acdc1d3e65308af7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:listener/app/inia-prod-alb/9e5f326344bb536e/0626d403bbe7ab7a",
            "priority": 90,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "IniaProject"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.main",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http_forward",
            "module.ecs.aws_lb_listener.https",
            "module.ecs.aws_lb_target_group.backend",
            "module.ecs.aws_lb_target_group.frontend",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
            "arn_suffix": "targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/Inia/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-backend-tg/bb3a0894be1e9202",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inia-prod-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "inia-prod-backend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-backend-tg",
              "Project": "IniaProject"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-frontend-tg/bead890bde177b06",
            "arn_suffix": "targetgroup/inia-prod-frontend-tg/bead890bde177b06",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-frontend-tg/bead890bde177b06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inia-prod-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "inia-prod-frontend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-frontend-tg",
              "Project": "IniaProject"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-middleware-tg/5bf9267f18c3f572",
            "arn_suffix": "targetgroup/inia-prod-middleware-tg/5bf9267f18c3f572",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/middleware/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:126588786097:targetgroup/inia-prod-middleware-tg/5bf9267f18c3f572",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:126588786097:loadbalancer/app/inia-prod-alb/9e5f326344bb536e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inia-prod-middleware-tg",
            "port": 9099,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "inia-prod-middleware-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-middleware-tg",
              "Project": "IniaProject"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:security-group/sg-03944b952c67b0efe",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03944b952c67b0efe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "inia-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "126588786097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inia-prod-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-alb-sg",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:security-group/sg-0f037512e23d014d5",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f037512e23d014d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow internal communication between ECS tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03944b952c67b0efe"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "inia-prod-ecs-sg",
            "name_prefix": "",
            "owner_id": "126588786097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inia-prod-ecs-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-ecs-sg",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:security-group/sg-0e1233d88d9f68a59",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1233d88d9f68a59",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f037512e23d014d5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "inia-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "126588786097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inia-prod-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-rds-sg",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006f5c90b32c40c36",
            "arn": "arn:aws:ec2:us-east-1:126588786097:elastic-ip/eipalloc-006f5c90b32c40c36",
            "association_id": "eipassoc-0c1240eb758502b81",
            "domain": "vpc",
            "id": "eipalloc-006f5c90b32c40c36",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03a6ad1241e8771bb",
            "private_dns": "ip-10-0-0-230.ec2.internal",
            "private_ip": "10.0.0.230",
            "public_dns": "ec2-18-211-146-78.compute-1.amazonaws.com",
            "public_ip": "18.211.146.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "inia-prod-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-nat-eip-1",
              "Project": "IniaProject"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:internet-gateway/igw-01c15573fa955cd13",
            "id": "igw-01c15573fa955cd13",
            "owner_id": "126588786097",
            "tags": {
              "Name": "inia-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-igw",
              "Project": "IniaProject"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006f5c90b32c40c36",
            "association_id": "eipassoc-0c1240eb758502b81",
            "connectivity_type": "public",
            "id": "nat-0c7e92b0e46ea6cc2",
            "network_interface_id": "eni-03a6ad1241e8771bb",
            "private_ip": "10.0.0.230",
            "public_ip": "18.211.146.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0acff79684d6c01e1",
            "tags": {
              "Name": "inia-prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-nat-1",
              "Project": "IniaProject"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-0811be1b10db89d66",
            "id": "rtb-0811be1b10db89d66",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-1",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-0f5220d4b42505743",
            "id": "rtb-0f5220d4b42505743",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-2",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-0fd30f5f15178b38e",
            "id": "rtb-0fd30f5f15178b38e",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-3"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-3",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-01d6412004905569e",
            "id": "rtb-01d6412004905569e",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-4"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-4",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-07833874634fdb6d6",
            "id": "rtb-07833874634fdb6d6",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-5"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-5",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-02ea6cb52761155a1",
            "id": "rtb-02ea6cb52761155a1",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7e92b0e46ea6cc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-private-rt-6"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-rt-6",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:route-table/rtb-0b6e5f79002143fe3",
            "id": "rtb-0b6e5f79002143fe3",
            "owner_id": "126588786097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c15573fa955cd13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inia-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-rt",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c8ad0d18a11536a",
            "route_table_id": "rtb-0811be1b10db89d66",
            "subnet_id": "subnet-0e8eb60ce94dddb41"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b37f179e9193c536",
            "route_table_id": "rtb-0f5220d4b42505743",
            "subnet_id": "subnet-0fc7aea05fc28735a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622fd301900a73f7",
            "route_table_id": "rtb-0fd30f5f15178b38e",
            "subnet_id": "subnet-067ae500f351ca244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0697771a34bcb6e30",
            "route_table_id": "rtb-01d6412004905569e",
            "subnet_id": "subnet-00d40c2dca3fff30e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6d80b031a7491d",
            "route_table_id": "rtb-07833874634fdb6d6",
            "subnet_id": "subnet-0dc39988d0e3a9d22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c5387feab396c0",
            "route_table_id": "rtb-02ea6cb52761155a1",
            "subnet_id": "subnet-090bf07382d2c9802"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f77db921e845a54",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-0acff79684d6c01e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac33419fc214cde",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-0b48a768fccdb4175"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049e13b40778c946a",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-01cdc4f0db93fa289"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c835b2bd3ae5239",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-06a4e02efee99885e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0d1d0967cbb7f1",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-03dd367e5fb6889db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c547d8a4b138d757",
            "route_table_id": "rtb-0b6e5f79002143fe3",
            "subnet_id": "subnet-0f1c73aafa964ff54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0e8eb60ce94dddb41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8eb60ce94dddb41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-1",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0fc7aea05fc28735a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc7aea05fc28735a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-2",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-067ae500f351ca244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ae500f351ca244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-3",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-3",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-00d40c2dca3fff30e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d40c2dca3fff30e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-4",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-4",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0dc39988d0e3a9d22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc39988d0e3a9d22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-5",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-5",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-090bf07382d2c9802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090bf07382d2c9802",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-private-subnet-6",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-private-subnet-6",
              "Project": "IniaProject",
              "Type": "private"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0acff79684d6c01e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acff79684d6c01e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-1",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0b48a768fccdb4175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b48a768fccdb4175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-2",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-01cdc4f0db93fa289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cdc4f0db93fa289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-3",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-3",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-06a4e02efee99885e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a4e02efee99885e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-4",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-4",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-03dd367e5fb6889db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dd367e5fb6889db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-5",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-5",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:subnet/subnet-0f1c73aafa964ff54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c73aafa964ff54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126588786097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inia-prod-public-subnet-6",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-public-subnet-6",
              "Project": "IniaProject",
              "Type": "public"
            },
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc/vpc-0b5836a65d91bc84e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6d293ea1b940f36",
            "default_route_table_id": "rtb-0fed0c7892970002e",
            "default_security_group_id": "sg-030c1eb26431da0a1",
            "dhcp_options_id": "dopt-03810697d4631963e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5836a65d91bc84e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fed0c7892970002e",
            "owner_id": "126588786097",
            "tags": {
              "Name": "inia-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-vpc",
              "Project": "IniaProject"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:security-group/sg-062140b63c4f122cf",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062140b63c4f122cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "inia-prod-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "126588786097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inia-prod-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-vpc-endpoints-sg",
              "Project": "IniaProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc-endpoint/vpce-01cb624aeba7cea99",
            "dns_entry": [
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1e.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1f.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1d.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01cb624aeba7cea99-uyps2pfi-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0331175KRJ8GREYLZXH"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0032245VX5TVL986NYA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01cb624aeba7cea99",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01843b1dda7b336fa",
              "eni-048ea9ad2cc0c9c93",
              "eni-08ccd863a07900ec5",
              "eni-0b7d59d12bb89c000",
              "eni-0e3d98e84bc55d879",
              "eni-0fd7d388aaa4dea49"
            ],
            "owner_id": "126588786097",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-062140b63c4f122cf"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.78",
                "subnet_id": "subnet-0dc39988d0e3a9d22"
              },
              {
                "ipv4": "10.0.11.200",
                "subnet_id": "subnet-090bf07382d2c9802"
              },
              {
                "ipv4": "10.0.6.201",
                "subnet_id": "subnet-0e8eb60ce94dddb41"
              },
              {
                "ipv4": "10.0.7.221",
                "subnet_id": "subnet-0fc7aea05fc28735a"
              },
              {
                "ipv4": "10.0.8.234",
                "subnet_id": "subnet-067ae500f351ca244"
              },
              {
                "ipv4": "10.0.9.44",
                "subnet_id": "subnet-00d40c2dca3fff30e"
              }
            ],
            "subnet_ids": [
              "subnet-00d40c2dca3fff30e",
              "subnet-067ae500f351ca244",
              "subnet-090bf07382d2c9802",
              "subnet-0dc39988d0e3a9d22",
              "subnet-0e8eb60ce94dddb41",
              "subnet-0fc7aea05fc28735a"
            ],
            "tags": {
              "Name": "inia-prod-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-ecr-api-endpoint",
              "Project": "IniaProject"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc-endpoint/vpce-0b2e0807969c27626",
            "dns_entry": [
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1e.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1d.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b2e0807969c27626-0cv6olq2-us-east-1f.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00321713K09O10KGVRQY"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00321713K09O10KGVRQY"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0329262KIVVCCMOIK1C"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0329262KIVVCCMOIK1C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b2e0807969c27626",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e1675413b37ae8e",
              "eni-011ae3d88f77748df",
              "eni-0135b7ab37f0e1325",
              "eni-022a63f40e6698d6c",
              "eni-07ba2deceb59061fa",
              "eni-0fd8a03a5742d58c7"
            ],
            "owner_id": "126588786097",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-062140b63c4f122cf"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.27",
                "subnet_id": "subnet-0dc39988d0e3a9d22"
              },
              {
                "ipv4": "10.0.11.159",
                "subnet_id": "subnet-090bf07382d2c9802"
              },
              {
                "ipv4": "10.0.6.193",
                "subnet_id": "subnet-0e8eb60ce94dddb41"
              },
              {
                "ipv4": "10.0.7.210",
                "subnet_id": "subnet-0fc7aea05fc28735a"
              },
              {
                "ipv4": "10.0.8.37",
                "subnet_id": "subnet-067ae500f351ca244"
              },
              {
                "ipv4": "10.0.9.52",
                "subnet_id": "subnet-00d40c2dca3fff30e"
              }
            ],
            "subnet_ids": [
              "subnet-00d40c2dca3fff30e",
              "subnet-067ae500f351ca244",
              "subnet-090bf07382d2c9802",
              "subnet-0dc39988d0e3a9d22",
              "subnet-0e8eb60ce94dddb41",
              "subnet-0fc7aea05fc28735a"
            ],
            "tags": {
              "Name": "inia-prod-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-ecr-dkr-endpoint",
              "Project": "IniaProject"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc-endpoint/vpce-03e96a87321624d3a",
            "dns_entry": [
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1e.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1d.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e96a87321624d3a-1y4xqynf-us-east-1f.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00303701Y4H7QZ4WDDC5"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05373763GRY9UFHF6YD9"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z00304543B7PMAOM3ORNZ"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0030369F3AFQ4Z9HA5M"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03e96a87321624d3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0042f6e1c49436deb",
              "eni-06f0e361433acc91c",
              "eni-0a9f176a7523fbcad",
              "eni-0c622a3b63239ed0f",
              "eni-0ebe8b47c59fb0a12",
              "eni-0f08d84dc86f7d932"
            ],
            "owner_id": "126588786097",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-062140b63c4f122cf"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.207",
                "subnet_id": "subnet-0dc39988d0e3a9d22"
              },
              {
                "ipv4": "10.0.11.6",
                "subnet_id": "subnet-090bf07382d2c9802"
              },
              {
                "ipv4": "10.0.6.176",
                "subnet_id": "subnet-0e8eb60ce94dddb41"
              },
              {
                "ipv4": "10.0.7.55",
                "subnet_id": "subnet-0fc7aea05fc28735a"
              },
              {
                "ipv4": "10.0.8.105",
                "subnet_id": "subnet-067ae500f351ca244"
              },
              {
                "ipv4": "10.0.9.247",
                "subnet_id": "subnet-00d40c2dca3fff30e"
              }
            ],
            "subnet_ids": [
              "subnet-00d40c2dca3fff30e",
              "subnet-067ae500f351ca244",
              "subnet-090bf07382d2c9802",
              "subnet-0dc39988d0e3a9d22",
              "subnet-0e8eb60ce94dddb41",
              "subnet-0fc7aea05fc28735a"
            ],
            "tags": {
              "Name": "inia-prod-logs-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-logs-endpoint",
              "Project": "IniaProject"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc-endpoint/vpce-0b9840b52edaaed14",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b9840b52edaaed14",
            "ip_address_type": "ipv4",
            "owner_id": "126588786097",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01d6412004905569e",
              "rtb-02ea6cb52761155a1",
              "rtb-07833874634fdb6d6",
              "rtb-0811be1b10db89d66",
              "rtb-0f5220d4b42505743",
              "rtb-0fd30f5f15178b38e"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "inia-prod-s3-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-s3-endpoint",
              "Project": "IniaProject"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126588786097:vpc-endpoint/vpce-0dc6bd5913160189f",
            "dns_entry": [
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1e.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1f.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1d.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dc6bd5913160189f-ppom4t65-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z030959923EVI9EK3J9HP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dc6bd5913160189f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02433ddb859253699",
              "eni-02f7ed030a5c726cc",
              "eni-04175d2c49ff07f4e",
              "eni-05947927207d38513",
              "eni-0cccf74e3c0f590cf",
              "eni-0eb6e347a72de0fad"
            ],
            "owner_id": "126588786097",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-062140b63c4f122cf"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.211",
                "subnet_id": "subnet-0dc39988d0e3a9d22"
              },
              {
                "ipv4": "10.0.11.100",
                "subnet_id": "subnet-090bf07382d2c9802"
              },
              {
                "ipv4": "10.0.6.199",
                "subnet_id": "subnet-0e8eb60ce94dddb41"
              },
              {
                "ipv4": "10.0.7.105",
                "subnet_id": "subnet-0fc7aea05fc28735a"
              },
              {
                "ipv4": "10.0.8.154",
                "subnet_id": "subnet-067ae500f351ca244"
              },
              {
                "ipv4": "10.0.9.60",
                "subnet_id": "subnet-00d40c2dca3fff30e"
              }
            ],
            "subnet_ids": [
              "subnet-00d40c2dca3fff30e",
              "subnet-067ae500f351ca244",
              "subnet-090bf07382d2c9802",
              "subnet-0dc39988d0e3a9d22",
              "subnet-0e8eb60ce94dddb41",
              "subnet-0fc7aea05fc28735a"
            ],
            "tags": {
              "Name": "inia-prod-secretsmanager-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "inia-prod-secretsmanager-endpoint",
              "Project": "IniaProject"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b5836a65d91bc84e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints"
          ]
        }
      ]
    }
  ]
}